# openvpn-monitor

./: .dockerignore  .gitignore  .travis.yml  AUTHORS  CNAME  Dockerfile  MANIFEST.in  README  README.md  VERSION.txt  _config.yml  app.wsgi  config.json  entrypoint.sh  index.html  index.md  logging.py  management_connection.py  openvpn-monitor.cfg  openvpn-monitor.conf  openvpn-monitor.conf.example  openvpn-monitor.py  package.json  params.json  pyproject.toml  repository.json  requirements.txt  setup.cfg  setup.py  tox.ini  wsgi.py
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  create-release-and-upload-assets.yml  lint.yml
_include/: google-analytics.html
confd/conf.d/: openvpn-monitor.toml
confd/templates/: openvpn-monitor.conf.tmpl
debian/: .gitignore  README.Debian  changelog  control  copyright  gbp.conf  python3-openvpn-monitor.postinst  python3-openvpn-monitor.prerm  rules
etc/openvpn-monitor/: apache.conf.example  openvpn-monitor.conf.example
openvpn_monitor/: app.py
openvpn_monitor/config/: loader.py
openvpn_monitor/location_data/maxmind/: geoip.py
openvpn_monitor/templates/: base.html  client_session.html  css.html  js.html  maps.html  maps.js  navbar.html  server_session.html  sessions.html  unavailable_vpn.html  vpn_info.html
openvpn_monitor/util/: __init__.py
rpm/: rpm-post-install.sh
templates/: javascript.html.j2  macros.html.j2  map.html.j2  navbar.html.j2  openvpn-monitor.html.j2  stylesheets.html.j2
tests/: conftest.py  listen.py  test_config_loader.py  test_data_collector.py  test_util.py
(+3 files in other folders)
